Add an integration test for XMPPAuction
Make it run this time